--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: 叶落
 email: 17343454@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ 一个中年板砖男，喜欢折腾，对程序一窍不通，感谢各位大佬的教程.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
